# burst-validation

./: .gitignore  .gitmodules
bfs-bcm/: Cargo.toml  visualize_bfs.py
bfs-bcm-all-to-all/: Cargo.toml  README.md  bfs-simple.md  output_bfs_group-0.json  output_test_group-0.json  visualize_bfs.py
bfs-bcm-all-to-all/src/: gapbs_parser.rs  lib.rs  main.rs
bfs-bcm-all-to-all/src/strategies/: all_to_all.rs  mod.rs
bfs-bcm-broadcast-reduce/: Cargo.toml
bfs-bcm-broadcast-reduce/src/: main.rs
bfs-bcm-numa/: Cargo.toml  README.md
bfs-bcm-numa/src/: lib.rs  main.rs
bfs-bcm-numa/src/numa/: divided.rs  mod.rs  monolithic.rs
bfs-bcm-numa/src/strategies/: all_to_all.rs  all_to_all_numa.rs  broadcast_reduce.rs  mod.rs
bfs-bcm/src/: main.rs
bfs-bcm/src/strategies/: scatter_reduce.rs
bfs-no-bcm/: Cargo.toml
bfs-no-bcm/src/: main.rs
bfs-paralellized/: Cargo.toml  README.md  output_bfs_group-0.json
bfs-paralellized/src/: lib.rs  main.rs
bfs-rayon/: Cargo.toml  visualize_bfs.py
bfs-rayon-numa/: Cargo.toml  visualize_bfs.py
bfs-rayon-numa-independ/: Cargo.toml
bfs-rayon-numa-independ/src/: main.rs  numa.rs
bfs-rayon-numa-same-alg/: Cargo.toml  visualize_bfs.py
bfs-rayon-numa-same-alg/src/: gapbs_parser.rs  main.rs
bfs-rayon-numa/src/: main.rs
bfs-rayon-numa/src/numa/: divided.rs  mod.rs  monolithic.rs
bfs-rayon/src/: main.rs
kmeans/kmeans/: Cargo.toml
kmeans/kmeans/src/: lib.rs
terasort/: generate_payload.py
terasort/ow-burst/: Cargo.toml
test-numa-affinity/: Cargo.toml
test-numa-affinity/src/: main.rs
test-numa-local/: Cargo.toml
test-numa-local/src/: main.rs
test-numa/test-numa-comm-async/: Cargo.toml
test-numa/test-numa-comm-async/src/: main.rs
test-numa/test-numa-communicated/: Cargo.toml
test-numa/test-numa-communicated/src/: main.rs
test-numa/test-numa-local/src/: main.rs
