[package]
name = "bfs-bcm-all-to-all"
version = "0.1.0"
edition = "2024"

[dependencies]
burst-communication-middleware = { version = "0.1.0", path = "../burst-communication-middleware", features = ["rabbitmq", "redis_list"] }
bytes = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
env_logger = "0.9.3"
log = "0.4.20"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.33.0", features = ["full"] }
