[package]
name = "bfs-rayon-numa-independ"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.10"
log = "0.4.32"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
