[package]
name = "actions"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mpi = { version = "0.6", features = ["user-operations", "derive"] }
rand = "0.8.5"
nalgebra = "0.23.2"
smartcore = { version = "0.2.0", features = ["nalgebra-bindings"] }
burst-communication-middleware = { path = "../../burst-communication-middleware", features = [
    "rabbitmq",
] }
bytes = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.9.3"
byteorder = "1.5.0"
bincode = "1.3.3"
aws-sdk-s3 = { version = "1.125.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.14"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
