[package]
name = "actions"
version = "0.1.0"
publish = false
edition = "2024"
resolver = "2"

[dependencies]
home = "=0.5.5"
burst-communication-middleware = { path = "../burst-communication-middleware", features = [
    "redis_list",
] }
log = "0.4.20"
env_logger = "0.9.3"
aws-sdk-s3 = { version = "1.14.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = [
    "hardcoded-credentials",
] }
polars = "0.33.2"
tokio = { version = "1.33.0", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
bytes = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "testing"
path = "src/testing.rs"
